Add github link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="links">
       <a href="#about">Over mij</a>
       <a href="#projects">Projecten</a>
+      <a target="_blank" href="https://github.com/AidenRaaphorst">Github</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
