--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       Thuis werk ik aan veel projecten en werk ik met Java, Python en JavaScript. <br>
       Met Java maakte ik vooral Minecraft mods. <br>
       Met python maakte ik een app waarmee je allemaal Minecraft mods tegelijkertijd kan downloaden voor een specifieke versie,
-      genaamd <a href="https://github.com/AidenRaaphorst/mc-mod-updater">MCModUpdater</a>. <br>
+      genaamd <a target="_blank" href="https://github.com/AidenRaaphorst/mc-mod-updater">MCModUpdater</a>. <br>
       Daar ben ik nog steeds mee bezig, want ik werk met allemaal tools die ik nog niet ken. <br>
       Verder heb ik ook een 'Wake on WAN' website gemaakt. Daarmee kan ik mijn pc aanzetten als ik niet thuis ben.
     </p>
