--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <nav>
     <h1 class="title">Aiden Raaphorst</h1>
 
+    <svg width="2rem" height="2rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M4 18L20 18" stroke="#ffffff" stroke-width="2" stroke-linecap="round" />
+      <path d="M4 12L20 12" stroke="#ffffff" stroke-width="2" stroke-linecap="round" />
+      <path d="M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round" />
+    </svg>
+
     <div class="links">
       <a href="#about">Over mij</a>
       <a href="#projects">Projecten</a>
@@ -102,5 +108,7 @@
     <p>Email: <a href="mailto:aidenraaphorst@gmail.com">aidenraaphorst@gmail.com</a></p>
     <p>Telefoonnummer: <a href="tel:+310624282834">06 24282834</a></p>
   </div>
+  
+  <script src="js/main.js"></script>
 </body>
 </html>
