Remove phone number

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <p>
       Thuis werk ik aan veel projecten en werk ik met Java, Python en JavaScript. <br>
       Met Java maakte ik vooral Minecraft mods. <br>
-      Met python maakte ik een app waarmee je allemaal Minecraft mods tegelijkertijd kan downloaden voor een specifieke versie,
-      genaamd <a target="_blank" href="https://github.com/AidenRaaphorst/mc-mod-updater">MCModUpdater</a>. <br>
+      Met Python maakte ik een app waarmee je allemaal Minecraft mods tegelijkertijd kan downloaden voor een specifieke versie,
+      genaamd <a target="_blank" href="https://github.com/AidenRaaphorst/mc-mod-updater">MC Mod Updater</a>. <br>
       Daar ben ik nog steeds mee bezig, want ik werk met allemaal tools die ik nog niet ken. <br>
       Verder heb ik ook een 'Wake on WAN' website gemaakt. Daarmee kan ik mijn pc aanzetten als ik niet thuis ben.
     </p>
@@ -70,7 +70,7 @@
 
     <p>Dit zijn een paar persoonlijke projectjes.</p>
 
-    <h3 class="container-header"><a target="_blank" href="https://github.com/AidenRaaphorst/mc-mod-updater">MCModUpdater</a></h3>
+    <h3 class="container-header"><a target="_blank" href="https://github.com/AidenRaaphorst/mc-mod-updater">MC Mod Updater</a></h3>
     <p>
       Ik speel vaak met veel client-side mods, dus als een nieuwe versie van Minecraft uitkwam, moest ik die allemaal updaten. <br>
       Ik vond het te veel moeite om elke mod op te zoeken, downloaden en dan in het goeie mapje te zetten, dus ik ging een app maken waar je links van mods in een bestand zet, en die dan tegelijkertijd kan downloaden. <br>
@@ -106,7 +106,6 @@
     <br>
 
     <p>Email: <a href="mailto:aidenraaphorst@gmail.com">aidenraaphorst@gmail.com</a></p>
-    <p>Telefoonnummer: <a href="tel:+310624282834">06 24282834</a></p>
   </div>
   
   <script src="js/main.js"></script>
