Automate age, add better font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Home</title>
 </head>
@@ -33,10 +33,10 @@
 
     <h3 class="container-header">School</h3>
     <p>
-      Ik ben 18 jaar en een 3e jaars MBO Software Developer op het 
+      Ik ben <span id="age">0</span> jaar en een 3e jaars MBO Software Developer op het 
       <a target="_blank" href="https://www.roc-nijmegen.nl/locaties/heyendaalseweg">ROC Nijmegen</a>. <br>
       Op school hebben we vooral veel geleerd over web development. HTML, CSS, JavaScript. We hebben ook gewerkt met React en Firebase. Zelf heb ik ook nog gewerkt met Tailwind. <br>
-      Ondanks veel front-end web development gedaan te hebben, vindt ik back-end, console apps, of gewoon Minecraft mods een stuk leuker, want ik ben niet goed met design. <br>
+      Ondanks veel front-end web development gedaan te hebben, vind ik back-end, console apps, of gewoon Minecraft mods een stuk leuker, want ik ben niet goed met design. <br>
     </p>
     
     <h3 class="container-header">Vrije tijd</h3>
